--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"tested_up_to": "5.3.2",
 	"license": "GPL-3.0",
 	"copyright": "Copyright (c) 2020",
-	"description": "Reusable Blocks are accessible via the WordPress Dashboard. The reusable blocks can also be set to stick at the top or bottom of specific post types in any order.",
+	"description": "Display reusable blocks everywhere. With Ubiquitous Blocks you can add reusable blocks to every page/post with a few clicks of the mouse.",
 	"scripts": {
 		"start": "cgb-scripts start",
 		"build": "cgb-scripts build",
