--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
 	"version": "1.0.0",
 	"private": true,
 	"contributors": [
-		"sebd86"
+		"sebd86",
+		"sortabrilliant"
 	],
 	"author": "Sébastien Dumont",
 	"author_uri": "https://sebastiendumont.com",
 	"homepage": "https://block.garden/",
-	"requires": "4.9.8",
+	"requires": "5.0.0",
 	"requires_php": "5.6",
 	"tested_up_to": "5.3.2",
 	"license": "GPL-3.0",
@@ -46,12 +47,14 @@
 		"prettier-stylelint": "^0.4.2",
 		"stylelint-config-prettier": "^3.1.0",
 		"stylelint-config-wordpress": "^13.1.0",
-		"stylelint-order": "^0.8.1"
+		"stylelint-order": "^0.8.1",
+		"react-select": "^3.0.8"
 	},
 	"dependencies": {
 		"cgb-scripts": "1.21.0",
 		"classnames": "^2.2.6",
-		"stylelint": "~9.10.1"
+		"stylelint": "~9.10.1",
+		"mem": ">=4.0.0"
 	},
 	"stylelint": {
 		"extends": [
