--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"title": "Ubiquitous Blocks",
 	"name": "ubiquitous-blocks",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"private": true,
 	"contributors": [
 		"sebd86",
@@ -10,64 +10,17 @@
 	"author": "Sébastien Dumont",
 	"author_uri": "https://sebastiendumont.com",
 	"homepage": "https://block.garden/",
-	"requires": "5.0.0",
-	"requires_php": "5.6",
-	"tested_up_to": "5.3.2",
 	"license": "GPL-3.0",
 	"copyright": "Copyright (c) 2020",
 	"description": "Display reusable blocks everywhere. With Ubiquitous Blocks you can add reusable blocks to every page/post with a few clicks of the mouse.",
 	"scripts": {
-		"start": "cgb-scripts start",
-		"build": "cgb-scripts build",
-		"eject": "cgb-scripts eject",
-		"version": "grunt version",
-		"update": "grunt update-pot",
-		"release": "grunt zip"
+		"start": "wp-scripts start",
+		"build": "wp-scripts build",
+		"lint:css": "wp-scripts lint-style ./src",
+		"lint:js": "wp-scripts lint-js ./src"
 	},
 	"devDependencies": {
-		"grunt": "^1.0.4",
-		"grunt-checktextdomain": "~1.0.1",
-		"grunt-contrib-clean": "~2.0.0",
-		"grunt-contrib-compress": "^1.5.0",
-		"grunt-contrib-copy": "^1.0.0",
-		"grunt-contrib-cssmin": "~3.0.0",
-		"grunt-contrib-sass": "^1.0.0",
-		"grunt-contrib-uglify": "~4.0.1",
-		"grunt-contrib-watch": "^1.1.0",
-		"grunt-dev-update": "^2.3.0",
-		"grunt-newer": "~1.3.0",
-		"grunt-postcss": "^0.9.0",
-		"grunt-potomo": "~3.5.0",
-		"grunt-sass": "~3.0.2",
-		"grunt-stylelint": "~0.10.1",
-		"grunt-text-replace": "^0.4.0",
-		"grunt-wp-i18n": "^1.0.3",
-		"load-grunt-tasks": "~4.0.0",
-		"node-sass": "^4.13.1",
-		"prettier-stylelint": "^0.4.2",
-		"stylelint-config-prettier": "^3.1.0",
-		"stylelint-config-wordpress": "^13.1.0",
-		"stylelint-order": "^0.8.1",
+		"@wordpress/scripts": "^7.1.3",
 		"react-select": "^3.0.8"
-	},
-	"dependencies": {
-		"cgb-scripts": "1.21.0",
-		"classnames": "^2.2.6",
-		"stylelint": "~9.10.1",
-		"mem": ">=4.0.0"
-	},
-	"stylelint": {
-		"extends": [
-			"stylelint-config-wordpress/scss",
-			"stylelint-config-prettier"
-		],
-		"plugins": [
-			"stylelint-order"
-		],
-		"rules": {
-			"at-rule-empty-line-before": null,
-			"no-descending-specificity": null,
-			"order/properties-alphabetical-order": true
-		}
 	}
 }
